# diploma

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: EXPERIMENT.md
scripts/: run_experiment.sh  setup_unimernet_cdm_docker.sh
src/dec_unimumer/: __init__.py  backends.py  corpus.py  crohme.py  data.py  download.py  error_markup.py  evaluation.py  experiment.py  inference.py  model_utils.py  paths.py  prompts.py  reporting.py  split.py  state.py  training.py
src/dec_unimumer/latex/: __init__.py  metrics.py  normalize.py  risk.py  tokenizer.py  validation_metrics.py  validator.py
